--- a/index.html
+++ b/index.html
@@ -22,23 +22,90 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="brand hidden-desktop" href="./index.html">Kuge Crafts</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li class="active">
+                <a href="./index.html">ホーム &nbsp; Home</a>
+              </li>
+              <li>
+                <a href="./.html">手仕事 &nbsp; Crafts</a>
+              </li>
+              <li>
+                <a href="./.html">企画支援 &nbsp; Artists consulting</a>
+              </li>
+              <li>
+                <a href="./.html">講師 &nbsp; Instructors</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
     <div class="container">
       <div class="row">
         <div class="span6">
-          小さな説明 小さな説明 小さな説明 小さな説明 小さな説明 小さな説明 小さな説明 小さな説明 小さな説明
-          小さな説明 小さな説明 小さな説明 小さな説明 小さな説明
-          小さな説明 小さな説明 小さな説明 小さな説明 小さな説明
         </div>
         <div class="span6">
-          <p>
-            two short paragraphs in English two short paragraphs in English two short paragraphs in English two short paragraphs in English two short paragraphs in English
-          </p>
-          <p>
-            paragraphs in English two short paragraphs in English
-          </p>
+          <div id="myCarousel" class="carousel slide">
+            <!-- <ol class="carousel-indicators">
+              <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+              <li data-target="#myCarousel" data-slide-to="1"></li>
+              <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol> -->
+            <!-- Carousel items -->
+            <div class="carousel-inner">
+              <div class="active item">
+                <img src="./img/carousel/pottery-1.jpg" />
+              </div>
+              <div class="item">
+                <img src="./img/carousel/pottery-2.jpg" />
+              </div>
+              <div class="item">
+                <img src="./img/carousel/pottery-3.jpg" />
+              </div>
+            </div>
+            <!-- Carousel nav -->
+            <!-- <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+            <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a> -->
+          </div>
         </div>
       </div>
-
+      <div class="row">
+        <div class="span6">
+          <p>ときめき》の手仕事...... </p>
+          <p>当工房では、単に技術を学ぶだけでなく、ご自身のときめく 新しい可能性を発見するお手伝いをさせていただきます。</p>
+          <p>デザインの基本から、自分独自のスタイルをどうやって構想 するかまで、それぞれの方に合った指導をいたします。創作 アクセサリー、絵画、楽焼、金継ぎのクラスがあります。展 示会などの企画支援も致して居ります。お気軽に見学にいら してください!</p>
+          
+        </div>
+        <div class="span6">
+          <p>Making Crafts inspires living, from how you decorate your home and how you welcome guests, to unique jewelry that expresses your personality. Discover yourself through crafts.</p>
+          <p>We work closely with you, listening to your ideas and desires. Kuge Crafts offers classes on jewelry making, painting, raku pottery, and kintsugi--the traditional Japanese craftsmanship of fixing broken pottery. We also offer artists consulting on to prepare for exhibitions and competitions. Several students of ours have won prestigious competitions.</p>
+          <p>Everyone is welcome. Just drop by!</p>
+        </div>
+      </div>
+      <footer>
+        <div class="row">
+          <div class="span6">
+            <address style="margin-top: 100px;">
+              <strong><span class="tel">03−6761−8880</span> <a href="mailto:&#x69;&#x6E;&#x66;&#x6F;&#x40;&#x74;&#x65;&#x73;&#x68;&#x69;&#x67;&#x6F;&#x74;&#x6F;&#x79;&#x61;&#x2D;&#x6B;&#x75;&#x67;&#x65;&#x2E;&#x63;&#x6F;&#x6D;">info@teshigotoya-kuge.com</a></strong><br>
+              <strong>166−0015東京都杉並区成田東1−34−10</strong><br>
+              <strong>1-34-10 Narita-higashi, Suginami-ku, Tokyo 166-0015</strong>
+            </address>
+          </div>
+          <div class="span6">
+            <iframe style="margin-top: 20px;" width="300" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=1-34-10+Narita-higashi,+Suginami-ku,+Tokyo+166-0015&amp;aq=&amp;sll=37.7577,-122.4376&amp;sspn=0.275504,0.225563&amp;ie=UTF8&amp;hq=1-34-10+Narita-higashi,&amp;hnear=Naritahigashi,+Suginami,+Tokyo+166-0015,+Japan&amp;t=m&amp;ll=35.692558,139.638805&amp;spn=0.006295,0.008353&amp;output=embed"></iframe><br /><small><a href="https://www.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=1-34-10+Narita-higashi,+Suginami-ku,+Tokyo+166-0015&amp;aq=&amp;sll=37.7577,-122.4376&amp;sspn=0.275504,0.225563&amp;ie=UTF8&amp;hq=1-34-10+Narita-higashi,&amp;hnear=Naritahigashi,+Suginami,+Tokyo+166-0015,+Japan&amp;t=m&amp;ll=35.692558,139.638805&amp;spn=0.006295,0.008353" style="color:#0000FF;text-align:left">View Larger Map</a></small>
+          </div>
+        </div>
+      </footer>
     </div> <!-- /container -->
 
     <!-- Le javascript
@@ -46,5 +113,8 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" charset="utf-8">
+      $('#myCarousel').carousel();
+    </script>
   </body>
 </html>
