fixed typo (eliminating "on" in second to last line)

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
         <div class="span6">
           <p>Making crafts inspires living, from how you decorate your home and how you welcome guests, to unique jewelry that expresses your personality. Discover yourself through crafts.</p>
-          <p>We work closely with you, listening to your ideas and desires. Kuge Crafts offers classes on jewelry making, painting, raku pottery, and kintsugi–the traditional Japanese craftsmanship of fixing broken pottery. We also offer artists consulting on to prepare for exhibitions and competitions. Several students of ours have won prestigious competitions.</p>
+          <p>We work closely with you, listening to your ideas and desires. Kuge Crafts offers classes on jewelry making, painting, raku pottery, and kintsugi–the traditional Japanese craftsmanship of fixing broken pottery. We also offer artists consulting to prepare for exhibitions and competitions. Several students of ours have won prestigious competitions.</p>
           <p>Everyone is welcome. Just drop by!</p>
         </div>
       </div>
