Place header images [#2]

--- a/index.html
+++ b/index.html
@@ -63,22 +63,21 @@
             <!-- Carousel items -->
             <div class="carousel-inner">
               <div class="active item">
-                <img src="img/carousel/kugeyoshiko_kugeyoshiichiro_teshigotoya_kuge.JPG" width="460" height="250" alt="Kugeyoshiko Kugeyoshiichiro Teshigotoya Kuge" /></div>
+                <img src="img/carousel/kugeyoshiko_kugeyoshiichiro_teshigotoya_kuge.jpg" width="460" height="250" alt="Kugeyoshiko Kugeyoshiichiro Teshigotoya Kuge" /></div>
               <div class="item">
-                <img src="img/carousel/accessory_teshigotoya_kuge.JPG" width="460" height="250" alt="Accessory Teshigotoya Kuge" /></div>
+                <img src="img/carousel/accessory_teshigotoya_kuge.jpg" width="460" height="250" alt="Accessory Teshigotoya Kuge" /></div>
               <div class="item">
-                <img src="img/carousel/drawing_painting_teshigotoyakuge.JPG" width="460" height="250" alt="Drawing Painting Teshigotoyakuge" /></div>
+                <img src="img/carousel/drawing_painting_teshigotoyakuge.jpg" width="460" height="250" alt="Drawing Painting Teshigotoyakuge" /></div>
               <div class="item">
-                <img src="img/carousel/peppers_closeup_teshigotoya_kuge.JPG" width="460" height="250" alt="Peppers Closeup Teshigotoya Kuge" /></div>
+                <img src="img/carousel/peppers_teshigotoya_kuge.jpg" width="460" height="250" alt="Peppers Teshigotoya Kuge" /></div>
               <div class="item">
-                <img src="img/carousel/peppers_teshigotoya_kuge.JPG" width="460" height="250" alt="Peppers Teshigotoya Kuge" /></div>
+                <img src="img/carousel/peppers_closeup_teshigotoya_kuge.jpg" width="460" height="250" alt="Peppers Closeup Teshigotoya Kuge" /></div>
               <div class="item">
-                <img src="img/carousel/supplies_teshigotoya_kuge.JPG" width="460" height="250" alt="Supplies Teshigotoya Kuge" /></div>
+                <img src="img/carousel/supplies_teshigotoya_kuge.jpg" width="460" height="250" alt="Supplies Teshigotoya Kuge" /></div>
               <div class="item">
-                <img src="img/carousel/tomoko_eyeballing_peppers_kugecrafts.JPG" width="460" height="250" alt="Tomoko Eyeballing Peppers Kugecrafts" />
-              </div>
+                <img src="img/carousel/tomoko_eyeballing_peppers_kugecrafts.jpg" width="460" height="250" alt="Tomoko Eyeballing Peppers Kugecrafts" /></div>
               <div class="item">
-                <img src="img/carousel/tomoko_kugeyoshiko_teshigotoya_kuge.JPG" width="460" height="250" alt="Tomoko Kugeyoshiko Teshigotoya Kuge" /></div>
+                <img src="img/carousel/drawing_painting2_teshigotoyakuge.jpg" width="460" height="250" alt="Drawing Painting Teshigotoyakuge" /></div>
             </div>
           </div>
         </div>
