--- a/consulting.html
+++ b/consulting.html
@@ -48,6 +48,7 @@
         <div class="span6">
         </div>
         <div class="span6">
+          <img src="img/carousel/artistscoaching_kugecrafts.jpg" width="460" height="150" alt="Artistscoaching Kugecrafts">
         </div>
       </div>
       <div class="row">
