--- a/crafts.html
+++ b/crafts.html
@@ -48,6 +48,7 @@
         <div class="span6">
         </div>
         <div class="span6">
+          <img src="img/carousel/crafts_kugecrafts.jpg" width="460" height="150" alt="Crafts Kugecrafts">
         </div>
       </div>
       <div class="row">
