--- a/instructors.html
+++ b/instructors.html
@@ -48,6 +48,7 @@
         <div class="span6">
         </div>
         <div class="span6">
+          <img src="img/carousel/instructors_kugecrafts.jpg" width="460" height="150" alt="Instructors Kugecrafts">
         </div>
       </div>
       <div class="row">
