Remove iframe google map, add static map with link to google maps [#1]

--- a/crafts.html
+++ b/crafts.html
@@ -84,7 +84,10 @@
           </div>
           <div class="span6">
             <div class="map">
-              <iframe width="300" height="300" src="https://www.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=1-34-10+Narita-higashi,+Suginami-ku,+Tokyo+166-0015&amp;aq=&amp;sll=37.7577,-122.4376&amp;sspn=0.275504,0.225563&amp;ie=UTF8&amp;hq=1-34-10+Narita-higashi,&amp;hnear=Naritahigashi,+Suginami,+Tokyo+166-0015,+Japan&amp;t=m&amp;ll=35.692558,139.638805&amp;spn=0.006295,0.008353&amp;output=embed"></iframe><br /><small><a href="https://www.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=1-34-10+Narita-higashi,+Suginami-ku,+Tokyo+166-0015&amp;aq=&amp;sll=37.7577,-122.4376&amp;sspn=0.275504,0.225563&amp;ie=UTF8&amp;hq=1-34-10+Narita-higashi,&amp;hnear=Naritahigashi,+Suginami,+Tokyo+166-0015,+Japan&amp;t=m&amp;ll=35.692558,139.638805&amp;spn=0.006295,0.008353" style="color:#0000FF;text-align:left">View Larger Map</a></small>
+              <a href="http://maps.apple.com?q=1-34-10+Narita-higashi,+Suginami-ku,+Tokyo+166‑0015">
+              <img src="img/kuge-crafts-map.png" width="460" height="260" alt="Kuge Crafts Map">
+              <br>
+              <small>View Larger Map</small></a>
             </div>
           </div>
         </div>
