--- a/crafts.html
+++ b/crafts.html
@@ -84,10 +84,10 @@
           </div>
           <div class="span6">
             <div class="map">
-              <a href="http://maps.apple.com?q=1-34-10+Narita-higashi,+Suginami-ku,+Tokyo+166‑0015">
-              <img src="img/kuge-crafts-map.png" width="460" height="260" alt="Kuge Crafts Map">
-              <br>
-              <small>View Larger Map</small></a>
+              <a href="http://maps.google.com?q=1-34-10+Narita-higashi,+Suginami-ku,+Tokyo+166‑0015">
+                <img src="img/kuge-crafts-map.png" width="460" height="260" alt="Kuge Crafts Map">
+                <br>
+                <small>View Larger Map</small></a>
             </div>
           </div>
         </div>
