Add FB icon to navbar at right [#3]

--- a/instructors.html
+++ b/instructors.html
@@ -38,6 +38,8 @@
               <li><a href="./crafts.html">手仕事 &nbsp; Crafts</a></li>
               <li><a href="./consulting.html">企画支援 &nbsp; Artists consulting</a></li>
               <li class="active"><a href="./instructors.html">講師 &nbsp; Instructors</a></li>
+              <li><a href="http://www.facebook.com/profile.php?id=100005361184439" target="fb">
+                <img src="img/fb.png" width="14" height="14" alt="FaceBook"></a></li>
             </ul>
           </div>
         </div>
