adjust space under banner image

--- a/consulting.html
+++ b/consulting.html
@@ -50,7 +50,7 @@
         <div class="span6">
         </div>
         <div class="span6">
-          <img src="img/carousel/artistscoaching_kugecrafts.jpg" width="460" height="150" alt="Artistscoaching Kugecrafts">
+          <img src="img/carousel/artistscoaching_kugecrafts.jpg" width="460" height="150" alt="Artistscoaching Kugecrafts" class="banner">
         </div>
       </div>
       <div class="row">
