--- a/crafts.html
+++ b/crafts.html
@@ -50,7 +50,7 @@
         <div class="span6">
         </div>
         <div class="span6">
-          <img src="img/carousel/crafts_kugecrafts.jpg" width="460" height="150" alt="Crafts Kugecrafts">
+          <img src="img/carousel/crafts_kugecrafts.jpg" width="460" height="150" alt="Crafts Kugecrafts" class="banner">
         </div>
       </div>
       <div class="row">
