--- a/instructors.html
+++ b/instructors.html
@@ -50,7 +50,7 @@
         <div class="span6">
         </div>
         <div class="span6">
-          <img src="img/carousel/instructors_kugecrafts.jpg" width="460" height="150" alt="Instructors Kugecrafts">
+          <img src="img/carousel/instructors_kugecrafts.jpg" width="460" height="150" alt="Instructors Kugecrafts" class="banner">
         </div>
       </div>
       <div class="row">
