--- a/crafts.html
+++ b/crafts.html
@@ -48,9 +48,10 @@
     <div class="container">
       <div class="row">
         <div class="span6">
+          <img src="img/kuge-logo-blue.gif" width="222" height="80" alt="Kuge Crafts" id="kuge-logo">
         </div>
         <div class="span6">
-          <img src="img/carousel/crafts_kugecrafts.jpg" width="460" height="150" alt="Crafts Kugecrafts" class="banner">
+          <img src="img/carousel/crafts_kugecrafts.jpg" width="460" height="150" alt="Crafts Kuge" class="banner">
         </div>
       </div>
       <div class="row">
