--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <div class="container">
       <div class="row">
         <div class="span6">
+          <img src="img/kuge-logo-colour.gif" width="256" height="100" alt="Kuge Crafts" style="margin: 15px auto; padding-right: 25px;">
         </div>
         <div class="span6">
           <div id="myCarousel" class="carousel slide">
