--- a/instructors.html
+++ b/instructors.html
@@ -48,6 +48,7 @@
     <div class="container">
       <div class="row">
         <div class="span6">
+          <img src="img/kuge-logo-blue.gif" width="222" height="80" alt="Kuge Crafts" id="kuge-logo">
         </div>
         <div class="span6">
           <img src="img/carousel/instructors_kugecrafts.jpg" width="460" height="150" alt="Instructors Kugecrafts" class="banner">
