Hide logo at phone size, word mark is in navbar

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </nav>
     <div class="container">
       <div class="row">
-        <div class="span6">
+        <div class="span6 hidden-phone">
           <img src="img/kuge-logo-colour.gif" width="256" height="100" alt="Kuge Crafts" style="margin: 15px auto; padding-right: 25px;">
         </div>
         <div class="span6">
