--- a/consulting.html
+++ b/consulting.html
@@ -47,7 +47,7 @@
     </nav>
     <div class="container">
       <div class="row">
-        <div class="span6">
+        <div class="span6 hidden-phone">
           <img src="img/kuge-logo-blue.gif" width="222" height="80" alt="Kuge Crafts" id="kuge-logo">
         </div>
         <div class="span6">
