--- a/instructors.html
+++ b/instructors.html
@@ -48,7 +48,8 @@
     <div class="container">
       <div class="row">
         <div class="span6 hidden-phone">
-          <img src="img/kuge-logo-blue.gif" width="222" height="80" alt="Kuge Crafts" id="kuge-logo">
+          <a href="./index.html">
+            <img src="img/kuge-logo-blue.gif" width="222" height="80" alt="Kuge Crafts" id="kuge-logo"></a>
         </div>
         <div class="span6">
           <img src="img/carousel/instructors_kugecrafts.jpg" width="460" height="150" alt="Instructors Kugecrafts" class="banner">
@@ -95,14 +96,80 @@
             </address>
           </div>
           <div class="span6">
+            <!-- #tminclude "/Users/kai/Projects/kuge/_map.html" -->
             <div class="map">
-              <a href="http://maps.google.com?q=1-34-10+Narita-higashi,+Suginami-ku,+Tokyo+166‑0015">
-                <img src="img/kuge-crafts-map.png" width="460" height="260" alt="Kuge Crafts Map">
-                <br>
-                <small>View Larger Map</small></a>
+              <a href="https://maps.google.co.jp/maps?ie=UTF8&cid=18047290746787271071&q=Teshigotoya+Kuge&iwloc=A&gl=JP">
+                <img src="img/kuge-crafts-map.png" width="460" height="260" alt="Kuge Crafts Map"></a>
+              <br>
+              <a href="https://maps.google.co.jp/maps?ie=UTF8&cid=18047290746787271071&q=Teshigotoya+Kuge&iwloc=A&gl=JP&hl=en_uk">
+                <small>View Larger Map (english)</small></a>
+            </div>
+<!-- end tminclude -->
+          </div>
+        </div>
+        <!-- #tminclude "/Users/kai/Projects/kuge/_prices-hours.html" -->
+        <div class="row pricing-hours">
+          <div class="span6">
+            <div class="row-fluid">
+              <dl class="span5">
+                <dt>入会金</dt>
+                <dd>１００００円</dd>
+                <dt>月４回</dt>
+                <dd>１３５００円</dd>
+                <dt>月２回</dt>
+                <dd>７５００円</dd>
+                <dt>月１回</dt>
+                <dd>４０００円</dd>
+                <dt>体験クラス</dt>
+                <dd>５０００円</dd> 
+                <dd><small class="muted">（材料費を含む）</small></dd>
+              </dl>
+              <div class="span7">
+                <dl>
+                  <dt>月〜木：</dt>
+                  <dd>２：３０−４：３０</dd>
+                  <dd>７：００−９：００</dd>
+                </dl>
+                <dl>
+                  <dt>土：</dt>
+                  <dd>１０：００−１２：００</dd>
+                  <dd>２：３０−４：３０</dd>
+                </dl>
+              </div>
+            </div>
+          </div>
+          <div class="span6">
+            <div class="row-fluid">
+              <dl class="span7">
+                <dt>Initial Membership Fee: </dt>
+                <dd>10000 yen</dd>
+                <dt>Four times/month:</dt>
+                <dd>13500 yen</dd>
+                <dt>Twice/month:</dt>
+                <dd>7500 yen</dd>
+                <dt>Once/month:</dt>
+                <dd>4000 yen</dd>
+                <dt>One-day tryout:</dt>
+                <dd>5000 yen</dd>
+                <dd><small class="muted">(includes all the cost for materials)</small></dd>
+              </dl>
+              <div class="span5">
+                <dl>
+                  <dt>Monday-Thursday</dt>
+                  <dd>2:30 - 4:30</dd>
+                  <dd>7:00 - 9:00</dd>
+                </dl>
+                <dl>
+                  <dt>Saturday</dt>
+                  <dd>10:00 - 12:00</dd>
+                  <dd>2:30 - 4:30</dd>
+                </dl>
+              </div>
             </div>
           </div>
         </div>
+
+<!-- end tminclude -->
         <div class="nav-phone">
           <ul class="unstyled">
             <li><a href="./index.html">ホーム &nbsp; Home</a></li>
