update pages with _price-hours changes

--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
               </dl>
               <div class="span7">
                 <dl>
-                  <dt>月〜木：</dt>
+                  <dt>月〜木 </dt>
                   <dd>２：３０−４：３０</dd>
                   <dd>７：００−９：００</dd>
                 </dl>
                 <dl>
-                  <dt>土：</dt>
+                  <dt>土 </dt>
                   <dd>１０：００−１２：００</dd>
                   <dd>２：３０−４：３０</dd>
                 </dl>
@@ -152,15 +152,15 @@
           <div class="span6">
             <div class="row-fluid">
               <dl class="span7">
-                <dt>Initial Membership Fee: </dt>
+                <dt>Initial Membership Fee </dt>
                 <dd>10000 yen</dd>
-                <dt>Four times/month:</dt>
+                <dt>Four times/month </dt>
                 <dd>13500 yen</dd>
-                <dt>Twice/month:</dt>
+                <dt>Twice/month </dt>
                 <dd>7500 yen</dd>
-                <dt>Once/month:</dt>
+                <dt>Once/month </dt>
                 <dd>4000 yen</dd>
-                <dt>One-day tryout:</dt>
+                <dt>One-day tryout </dt>
                 <dd>5000 yen</dd>
                 <dd><small class="muted">(includes all the cost for materials)</small></dd>
               </dl>
