--- a/consulting.html
+++ b/consulting.html
@@ -2,7 +2,7 @@
 <html dir="ltr" lang="">
   <head>
     <meta charset="utf-8" />
-    <title>Kuge Crafts: Artists Consulting</title>
+    <title>手仕事屋久家: 企画支援</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
 
@@ -57,7 +57,7 @@
       </div>
       <div class="row">
         <div class="span6">
-          <p>この３５年間、新日美展、クラフト展、東京陶芸展、東京・ニューヨーク姉妹都市交流陶芸展などを獲得した多くのアーチストのプロデュースや、個展の企画および個展用の作品の創作のアドバイスに力を入れてきました。当工房では、アーチストの創作支援を提供しています。</p>
+          <p>この３５年間、新日美展、クラフト展、東京陶芸展、東京・ニューヨーク姉妹都市交流陶芸展などで賞を獲得した多くのアーチストのプロデュースや、個展の企画および個展用の作品の創作のアドバイスに力を入れてきました。当工房では、アーチストの創作支援を提供しています。</p>
 
           <p>＊アーチストとしてどんな自己イメージを作っていくのか。それには何が必要なのか。</p>
 
