--- a/crafts.html
+++ b/crafts.html
@@ -2,7 +2,7 @@
 <html dir="ltr" lang="">
   <head>
     <meta charset="utf-8" />
-    <title>Kuge Crafts: Crafts</title>
+    <title>手仕事屋久家: 手仕事</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
 
