--- a/_map.html
+++ b/_map.html
@@ -1,7 +1,7 @@
             <div class="map">
-              <a href="https://maps.google.co.jp/maps?ie=UTF8&cid=18047290746787271071&q=Teshigotoya+Kuge&iwloc=A&gl=JP">
+              <a href="https://maps.google.com/maps?q=166%E2%88%920015%E6%9D%B1%E4%BA%AC%E9%83%BD%E6%9D%89%E4%B8%A6%E5%8C%BA%E6%88%90%E7%94%B0%E6%9D%B11%E2%88%9234%E2%88%9210&ie=UTF-8&ei=oOh0UeXRCqPgiALJ2oDYDg&ved=0CAsQ_AUoAg">
                 <img src="img/kuge-crafts-map.png" width="460" height="260" alt="Kuge Crafts Map"></a>
               <br>
-              <a href="https://maps.google.co.jp/maps?ie=UTF8&cid=18047290746787271071&q=Teshigotoya+Kuge&iwloc=A&gl=JP&hl=en_uk">
+              <a href="https://maps.google.com/maps?q=166%E2%88%920015%E6%9D%B1%E4%BA%AC%E9%83%BD%E6%9D%89%E4%B8%A6%E5%8C%BA%E6%88%90%E7%94%B0%E6%9D%B11%E2%88%9234%E2%88%9210&ie=UTF-8&ei=oOh0UeXRCqPgiALJ2oDYDg&ved=0CAsQ_AUoAg">
                 <small>View Larger Map (english)</small></a>
             </div>
