Updated project for maps changes made by Jared

--- a/instructors.html
+++ b/instructors.html
@@ -98,12 +98,13 @@
           <div class="span6">
             <!-- #tminclude "/Users/kai/Projects/kuge/_map.html" -->
             <div class="map">
-              <a href="https://maps.google.co.jp/maps?ie=UTF8&cid=18047290746787271071&q=Teshigotoya+Kuge&iwloc=A&gl=JP">
+              <a href="https://maps.google.com/maps?q=166%E2%88%920015%E6%9D%B1%E4%BA%AC%E9%83%BD%E6%9D%89%E4%B8%A6%E5%8C%BA%E6%88%90%E7%94%B0%E6%9D%B11%E2%88%9234%E2%88%9210&ie=UTF8&hnear=Japan,+T%C5%8Dky%C5%8D-to,+Suginami-ku,+Naritahigashi,+%EF%BC%91%E4%B8%81%E7%9B%AE%EF%BC%93%EF%BC%94%E2%88%92%EF%BC%91%EF%BC%90&t=m&z=16">
                 <img src="img/kuge-crafts-map.png" width="460" height="260" alt="Kuge Crafts Map"></a>
               <br>
-              <a href="https://maps.google.co.jp/maps?ie=UTF8&cid=18047290746787271071&q=Teshigotoya+Kuge&iwloc=A&gl=JP&hl=en_uk">
+              <a href="https://maps.google.com/maps?q=166%E2%88%920015%E6%9D%B1%E4%BA%AC%E9%83%BD%E6%9D%89%E4%B8%A6%E5%8C%BA%E6%88%90%E7%94%B0%E6%9D%B11%E2%88%9234%E2%88%9210&ie=UTF8&hnear=Japan,+T%C5%8Dky%C5%8D-to,+Suginami-ku,+Naritahigashi,+%EF%BC%91%E4%B8%81%E7%9B%AE%EF%BC%93%EF%BC%94%E2%88%92%EF%BC%91%EF%BC%90&t=m&z=16">
                 <small>View Larger Map (english)</small></a>
             </div>
+
 <!-- end tminclude -->
           </div>
         </div>
